force-app/main/default/objects/TF_Log__c/TF_Log__c.object-meta.xml
<CustomObject>
    <description>Holds the Team Facilitator Log records</description>
    <label>TF Log</label>
    <nameField>
        <displayFormat>TFL-{00000}</displayFormat>
        <label>TF Log Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TF Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>