force-app/main/default/objects/TF_Log__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Client__c</referenceTo>
    <relationshipLabel>TF Logs</relationshipLabel>
    <relationshipName>TF_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>