force-app/main/default/objects/TF_Log__c/fields/Date_of_TF_Log__c.field-meta.xml
<CustomField>
    <fullName>Date_of_TF_Log__c</fullName>
    <label>Date of TF Log</label>
    <type>Date</type>
</CustomField>