force-app/main/default/objects/TF_Log__c/fields/Dog__c.field-meta.xml
<CustomField>
    <fullName>Dog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dog</label>
    <referenceTo>Dog__c</referenceTo>
    <relationshipLabel>TF Logs</relationshipLabel>
    <relationshipName>TF_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>