force-app/main/default/objects/TF_Log__c/fields/Input_from_TF_Lead_Requested__c.field-meta.xml
<CustomField>
    <fullName>Input_from_TF_Lead_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Input from TF Lead Requested</label>
    <type>Checkbox</type>
</CustomField>