force-app/main/default/objects/TF_Log__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>TF Logs</relationshipLabel>
    <relationshipName>TF_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>