force-app/main/default/objects/TF_Log__c/fields/Team_Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Team_Facilitator__c</fullName>
    <label>Team Facilitator</label>
    <referenceTo>Team_Facilitator__c</referenceTo>
    <relationshipLabel>TF Logs</relationshipLabel>
    <relationshipName>TF_Logs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>