force-app/main/default/objects/TF_Log__c/fields/TF_Log_Name__c.field-meta.xml
<CustomField>
    <fullName>TF_Log_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id,  Team_Facilitator__r.Name  &amp;&quot; &quot;&amp;  Client__r.Name  &amp;&quot; &quot;&amp;  Dog__r.Name  &amp;&quot; &quot;&amp; TEXT(Date_of_TF_Log__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TF Log Name</label>
    <type>Text</type>
</CustomField>