force-app/main/default/objects/TF_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>TF_Log_Name__c</columns>
    <columns>NAME</columns>
    <columns>Date_of_TF_Log__c</columns>
    <columns>Client__c</columns>
    <columns>Dog__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>