force-app/main/default/objects/TF_Log__c/listViews/All_TF_Logs.listView-meta.xml
<ListView>
    <fullName>All_TF_Logs</fullName>
    <columns>TF_Log_Name__c</columns>
    <columns>Date_of_TF_Log__c</columns>
    <columns>Client__c</columns>
    <columns>Dog__c</columns>
    <columns>Team_Facilitator__c</columns>
    <columns>Team_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All TF Logs</label>
</ListView>